Modify Home page layout and various CSS layouts. Also import social media icons.

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -152,6 +152,24 @@ if (data.startDate && data.releaseDate)
         height: 100%;
     }
 
+    table, th, td {
+        border: 2px solid #333;
+    }
+
+    table {
+        border-collapse: collapse;
+    }
+
+    td {
+        padding: 6px 12px;
+    }
+
+    code {
+        background-color: #444;
+        padding: 0.2em 0.4em;
+        border-radius: 7px;
+    }
+
 </style>
 
 <script>
