--- a/src/components/TableOfContentElements.astro
+++ b/src/components/TableOfContentElements.astro
@@ -1,5 +1,5 @@
 ---
-// NOTE: Seperate this file with TableOfContent so that this file can reference it self when there are subheadings.
+// NOTE: This file calls itself recursively so it can't be combined with TableOfContent.
 // In line 18, it shows Astro.self and inserts any subheadings (if there are any)
 // So don't try to combine it with TableOfContent
 import type { HeadingWithSubheadings } from './TableOfContent.astro';
@@ -31,7 +31,7 @@ const { headings } = Astro.props as Props;
 
     ul ul {
         margin-top: 0;
-        padding-left: 30px;
+        padding-left: 2em;
     }
     
     li span {
