--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,14 @@ h1 { font-size: 2rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.3rem; } */
 
+h3 {
+    margin-bottom: 10px;
+}
+
+h4 {
+    margin-bottom: 0px;
+}
+
 p, li {
     line-height: 1.75;
 }
