--- a/src/components/ProjectCardFromCollection.astro
+++ b/src/components/ProjectCardFromCollection.astro
@@ -25,5 +25,5 @@ if (!project)
         tags={project.data.tags}
         />
     :
-    <p>Error: Cannot find project "{title}". Please contact me: <a href="/about/#contact">Contact</a></p>
+    <p>Error: Cannot find project "{title}". Please contact me: <a href="/about#contact">Contact</a></p>
 }
