--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import LinkedInIcon from "../images/General/Icons/Social/LinkedInIcon.png";
 				<p>I'm passionate in both game and web development and I'm looking for new projects that interest me and can contribute to!</p>
 				
 				<h2>Education</h2>
-				<h3>Game Developer - <a href="/projects?includeTags=%5B%22201%22%5D">Game Projects</a></h3>
+				<h3>Game Developer - <a href="/projects/?includeTags=%5B%22201%22%5D">Game Projects</a></h3>
 				
 				<ul>
 					<li>Graduated from Game Development and Technology from NYP (Nanyang Polytechnic)</li>
@@ -30,7 +30,7 @@ import LinkedInIcon from "../images/General/Icons/Social/LinkedInIcon.png";
 					</li>
 				</ul>
 				<!-- TODO (HIGH): Add correct link -->
-				<h3>Web Developer - <a href="/projects?includeTags=%5B%22203%22%5D">Web Projects</a></h3>
+				<h3>Web Developer - <a href="/projects/?includeTags=%5B%22203%22%5D">Web Projects</a></h3>
 				<ul>
 					<li>Self taught during my free time</li>
 					<li>Mainly used to build this website. <a href="/portfolio-website">Blog on building process</a></li>
