--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@
         <nav>
             <ul>
                 <li id="header-home"><a href="/">Home</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/projects/">Projects</a></li>
+                <li><a href="/about/">About</a></li>
                 <!-- <li><a href="index.html">
                     <img src="img/settings.svg" alt="" />
                 </a></li> -->
