Add different widths to images. Let's astro know what resolutions to generate for, to set in srcset
https://docs.astro.build/en/guides/images/#widths

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -32,7 +32,7 @@ const userLocale="en-UK";
 <div class="card" id={title}>
     <div class="projectCard" data-tags={tags}>
         <a href={`/${slug}/`} class="thumbnail">
-            <Image src={thumbnailPath} alt={title + " thumbnail"} transition:name=`project-img-${title}`/>
+            <Image src={thumbnailPath} alt={title + " thumbnail"} transition:name=`project-img-${title}` widths={[320, 500, thumbnailPath.width]}/>
         </a>
         <div class="details">
             <h2>
