--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import LinkedInIcon from "../images/General/Icons/Social/LinkedInIcon.png";
 				<h3>Web Developer - <a href="/projects/?includeTags=%5B%22203%22%5D">Web Projects</a></h3>
 				<ul>
 					<li>Self taught during my free time</li>
-					<li>Mainly used to build this website. <a href="/portfolio-website">Blog on building process</a></li>
+					<li>Mainly used to build this website. <a href="/portfolio-website/">Blog on building process</a></li>
 				</ul>
 			</div>
 			<!-- <div class="card">
