--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import LinkedInIcon from "../images/General/Icons/Social/LinkedInIcon.png";
 				<h3>Game Developer - <a href="/projects/?includeTags=%5B%22201%22%5D">Game Projects</a></h3>
 				
 				<ul>
-					<li>Graduated from Game Development and Technology from NYP (Nanyang Polytechnic)</li>
+					<li>Graduated from Game Development and Technology at NYP (Nanyang Polytechnic)</li>
 					<li>Certificates from the Diploma:
 						<ul>
 							<li>Director's List - Academic Year 2019/20 Semester 1</li>
