--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,25 +33,47 @@ const { title, description, darkMode = true} = Astro.props as Props;
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+    <!-- Google Tag Manager -->
+    <script lang="js">
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != "dataLayer" ? "&l=" + l : "";
+            j.async = true;
+            j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, "script", "dataLayer", "GTM-T38D5LZB");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>{title}</title>
     <ViewTransitions />
-</head>
-<body class = {darkMode ? 'dark' : 'light'}>
-    <Header/>
-    <!-- <Sprite.Provider>  For astro-icon package: https://github.com/natemoo-re/astro-icon#usage -->
-        <slot/> 
-    <!-- </Sprite.Provider> -->
-</body>
+    </head>
+    <body class={darkMode ? "dark" : "light"}>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript
+        ><iframe
+            src="https://www.googletagmanager.com/ns.html?id=GTM-T38D5LZB"
+            height="0"
+            width="0"
+            style="display:none;visibility:hidden"></iframe></noscript
+        >
+        <!-- End Google Tag Manager (noscript) -->
+        <Header />
+        <!-- <Sprite.Provider>  For astro-icon package: https://github.com/natemoo-re/astro-icon#usage -->
+        <slot />
+        <!-- </Sprite.Provider> -->
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
+    </body>
 </html>
-
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-    }
-</style>
