--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
-import Header from '../components/Header.astro';
-import '../styles/global.css';
+import { ViewTransitions } from "astro:transitions";
+import Header from "../components/Header.astro";
+import "../styles/global.css";
 // import { Sprite } from 'astro-icon';
 
 export interface Props {
@@ -34,26 +34,38 @@ const { title, description, darkMode = true} = Astro.props as Props;
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <!-- Google Tag Manager -->
-    <script lang="js">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LT15BRHEQ"
+        ></script>
+        <script lang="js">
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+            dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-8LT15BRHEQ");
+        </script>
+        <!-- Google Tag Manager -->
+        <script lang="js">
         (function (w, d, s, l, i) {
             w[l] = w[l] || [];
             w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
             var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != "dataLayer" ? "&l=" + l : "";
+            j = d.createElement(s),
+            dl = l != "dataLayer" ? "&l=" + l : "";
             j.async = true;
             j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, "script", "dataLayer", "GTM-T38D5LZB");
-    </script>
-    <!-- End Google Tag Manager -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content={description} />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <title>{title}</title>
-    <ViewTransitions />
+        </script>
+        <!-- End Google Tag Manager -->
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content={description} />
+        <!-- <link rel="stylesheet" href="style.css" /> -->
+        <title>{title}</title>
+        <ViewTransitions />
     </head>
     <body class={darkMode ? "dark" : "light"}>
         <!-- Google Tag Manager (noscript) -->
@@ -70,10 +82,10 @@ const { title, description, darkMode = true} = Astro.props as Props;
         <slot />
         <!-- </Sprite.Provider> -->
         <style>
-            body {
-                margin: 0;
-                padding: 0;
-            }
+        body {
+            margin: 0;
+            padding: 0;
+        }
         </style>
     </body>
 </html>
