Greatly modify the project card
- Change the surrounding element to <a> so that the whole card can be clicked. This removes clicking on tags that are on the card though. Because nested <a> tags aren't allowed.
- Modify animations for it, mainly when showing and hiding the card.
- Modify how it appears in small screens

--- a/src/components/TagDisplay.astro
+++ b/src/components/TagDisplay.astro
@@ -6,16 +6,17 @@ export interface Props {
     tags: Tags[],
     project: string, // To prevent duplicate ids
     isSmall?: boolean,
+    ifAddLink?: boolean,
 }
 
-const {tags, project, isSmall} = Astro.props as Props;
+const {tags, project, isSmall, ifAddLink = true} = Astro.props as Props;
 ---
 
 <div class= {(isSmall && "tag-container-small") + " tag-container card"}>
     <p>Tags:</p>
     <ul>
         {tags.map(tag => (
-            <Tag tag={tag} project={project}/>
+            <Tag tag={tag} project={project} ifAddLink={ifAddLink}/>
           ))}
     </ul>
 </div>
