--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -29,37 +29,36 @@ const dateOptions: Intl.DateTimeFormatOptions = { day: "numeric", month: "long",
 const userLocale="en-UK";
 ---
 
-<div class="card" id={title}>
-    <div class="projectCard" data-tags={tags}>
-        <a href={`/${slug}/`} class="thumbnail">
-            <Image src={thumbnailPath} alt={title + " thumbnail"} transition:name=`project-img-${title}` widths={[320, 500, thumbnailPath.width]}/>
-        </a>
-        <div class="details">
-            <h2>
-                <a href={`/${slug}/`}>{title}</a>
-            </h2>
-            <TagDisplay tags={tags} project={title} isSmall={true}/>
-            {(tags.includes(Tags.Ongoing) || releaseDate === undefined) ?
-                <p>Date: <span class="date">{startDate.toLocaleDateString(userLocale, dateOptions)} - Ongoing</span></p>
-                :
-                <p>Date: <span class="date">{startDate.toLocaleDateString(userLocale, dateOptions)} - {releaseDate.toLocaleDateString(userLocale, dateOptions)} ({getDuration(startDate, releaseDate)})</span></p>
-            }
-            <p>{description}</p>
-        </div>
+<a class="card projectCard" id={title} href={`/${slug}/`} data-tags={tags}>
+    <Image 
+        src={thumbnailPath} 
+        alt={title + " thumbnail"} 
+        transition:name=`project-img-${title}` 
+        widths={[320, 500, thumbnailPath.width]}
+    />
+    <div class="details">
+        <h2>{title}
+        </h2>
+        <TagDisplay tags={tags} project={title} isSmall={true} ifAddLink={false}/>
+        {(tags.includes(Tags.Ongoing) || releaseDate === undefined) ?
+            <p>Date: <span class="date">{startDate.toLocaleDateString(userLocale, dateOptions)} - Ongoing</span></p>
+            :
+            <p>Date: <span class="date">{startDate.toLocaleDateString(userLocale, dateOptions)} - {releaseDate.toLocaleDateString(userLocale, dateOptions)} ({getDuration(startDate, releaseDate)})</span></p>
+        }
+        <p>{description}</p>
     </div>
-</div> 
+</a> 
 
 <style>
     .card {
         /* Changes depending on the screen size */
         --curr-max-height: 25rem; 
         
-        --animation-time: 1000ms;
+        --animation-time: 1.25s;
         --animation-curve: cubic-bezier(0.15, 0.79, 0.2, 1);
         
         height: max-content;
         overflow: hidden;
-        transition: 0.1s;
     }
     
     .card:hover {
@@ -70,24 +69,20 @@ const userLocale="en-UK";
     .projectCard {
         display: flex;
         align-items: center;
+        overflow-y: hidden;
     }
 
-    .projectCard .thumbnail {
+    .projectCard img {
         width: 30%;
         min-width: 30%;
+        height: fit-content;
         overflow: hidden;
         border-radius: 10px;
+        transition: transform 0.3s;
     }
 
-    .projectCard .thumbnail img {
-        height: unset;
-        width: 100%;
-        object-fit: contain;
-        transition: .25s;
-    }
-
-    .projectCard:hover .thumbnail img {
-        transform: scale(1.05);
+    .projectCard:hover img {
+        transform: scale(1.025);
     }
 
     .projectCard .details {
@@ -96,23 +91,46 @@ const userLocale="en-UK";
         flex-grow: 1;
     }
 
+    /* Animating underlines. Base code from: https://css-irl.info/animating-underlines/ */
     h2 {
         margin-bottom: 0;
+        position: relative;
+        border-bottom: none;
+        overflow: hidden;
     }
 
-    h2 a {
-        text-decoration: none;
-        color: var(--color-text);
+    h2::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0.05em;
+        background-color: var(--color-accent);
+        transition: opacity .3s ease-out;
+        opacity: 0;
+        /* transform: translateX(-100%); */
+    }
+    
+    .projectCard:hover h2::after,
+    .projectCard:hover h2::after {
+        /* transform: translateX(0); */
+        opacity: 1;
+        /* transition: opacity 1s ease-out; */
+        /* animation: .75s ease-out forwards showUnderline; */
     }
 
-    h2 a:hover {
-        text-decoration: underline;
+    .projectCard:hover h2 {
     }
 
-    p {
+    a .details p {
         margin-top: 0;
         margin-bottom: 0;
-        width: 100%;
+    }
+
+    a, a:hover {
+        text-decoration: none;
+        color: var(--color-text);
     }
 
     .hideCard {
@@ -128,7 +146,7 @@ const userLocale="en-UK";
             max-height: var(--curr-max-height);
             opacity: 1;
         }
-        50% {
+        30% {
             opacity: 0;
         }
         to {
@@ -142,9 +160,7 @@ const userLocale="en-UK";
     .showCard {
         /* max-height: 0; */
         /* transition: max-height 2000ms; */
-        animation: calc(var(--animation-time) * 2) var(--animation-curve) both showCard;
-
-        /* position: absolute; */
+        animation: calc(var(--animation-time) * 2) var(--animation-curve) calc(var(--animation-time) * 0.3) both showCard;
     }
 
     @keyframes showCard {
@@ -154,8 +170,8 @@ const userLocale="en-UK";
             max-height: 0;
             opacity: 0;
         }
-        75% {
-            opacity: 1;
+        3% {
+            opacity: 0;
         }
         to {
             max-height: var(--curr-max-height);
@@ -171,14 +187,24 @@ const userLocale="en-UK";
         }
 
         .projectCard {
-          flex-direction: column;
-          align-items: flex-start;
+            flex-direction: column;
+            align-items: flex-start;
+            max-height: calc(100dvh - 100px);
         }
         
-        .projectCard .thumbnail {
-            width: 100%;
-            max-width: 500px;
+        .projectCard img {
+            /* min-width: 100%; */
+            width: fit-content;
+            max-width: min(500px, 100%);
             margin: 0 auto;
+        }
+
+        .projectCard .details {
+            margin: 0;
+        }
+
+        .projectCard h2 {
+            margin-top: .8em;
         }
     }
 
